# fullstack-python-react-app

./: .env  .gitignore  README.md  docker-compose.yml
backend/: .env  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/alembic/: alembic.ini  env.py
backend/app/: __init__.py  alembic.ini  main.py
backend/app/api/graphql/: order_mutations.py  schema.py
backend/app/api/graphql/resolvers/: order_mutations.py
backend/app/api/graphql/resolvers/orders/: order_mutations.py
backend/app/api/graphql/resolvers/users/: users_mutations.py
backend/app/api/graphql/types/: order_types.py
backend/app/api/graphql/types/users/: user_types.py
backend/app/config/: dependencies.py
backend/app/core/: config.py  exceptions.py
backend/app/db/: session.py
backend/app/domain/orders/: README.md  entities.py  interfaces.py  repositories.py  services.py
backend/app/domain/users/entities/: user.py
backend/app/domain/users/interfaces/: user_respository.py
backend/app/domain/users/services/: user_service.py
backend/app/infrastructure/database/models/: user.py
backend/app/infrastructure/repositories/orders/: order_repository_impl.py
backend/app/infrastructure/repositories/users/: user_respsitory_impl.py
backend/app/infrastructure/services/orders/: order_services_impl.py
backend/config/: dependencies.py
backend/scripts/: create_initial_migrations.py  seed_initial_data.py
backend/tests/: conftest.py
backend/tests/domain/users/: test_user_service.py
frontend/: .gitignore  Dockerfile  package-lock.json  package.json
(+1 files in other folders)
