[project]
name = "fullstack-app-backend"
version = "0.1.0"
description = "Backend para aplicación fullstack con arquitectura limpia"
authors = [
    {name = "Jorge Alvarez",email = "jorgehaq@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "pydantic (>=2.11.2,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "strawberry-graphql[fastapi] (>=0.263.2,<0.264.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "sqlalchemy-utils (>=0.41.2,<0.42.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"
flake8 = "^7.2.0"
pre-commit = "^4.2.0"

